--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "embgen"
 version = "0.1.0"
 description = "Embedded code generator - Generate code from YAML definitions"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
     "jinja2>=3.1.6",
     "pydantic>=2.12.5",
@@ -23,10 +23,7 @@ dev = [
     "ruff>=0.14.10",
     "ty>=0.0.5",
 ]
-docs = [
-    "mkdocs>=1.6.1",
-    "mkdocs-material[imaging]>=9.7.0",
-]
+docs = ["mkdocs>=1.6.1", "mkdocs-material[imaging]>=9.7.0"]
 
 [build-system]
 requires = ["hatchling"]
