--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,11 @@ dev = [
     "ruff>=0.14.10",
     "ty>=0.0.5",
 ]
-docs = ["mkdocs>=1.6.1", "mkdocs-material[imaging]>=9.7.0"]
+docs = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material[imaging]>=9.7.0",
+    "mkdocstrings[python]>=1.0.0",
+]
 
 [build-system]
 requires = ["hatchling"]
