--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,6 +88,10 @@ plugins:
             show_root_heading: false
             show_root_toc_entry: false
             heading_level: 3
+            show_source: false
+            show_symbol_type_heading: true
+            show_symbol_type_toc: true
+            separate_signature: true
           selection:
             members: true
 
